@@ -1364,8 +1364,8 @@ enum WINDOWINFO_TYPE
 	WTYPE_DIALOG                    = 4,
 	WTYPE_VMENU                     = 5,
 	WTYPE_HELP                      = 6,
+	WTYPE_COMBOBOX                  = 7,
 #ifdef FAR_USE_INTERNALS
-	WTYPE_COMBOBOX,
 	WTYPE_FINDFOLDER,
 	WTYPE_GRABBER,
 	WTYPE_HMENU,
