@@ -1,4 +1,10 @@
-﻿drkns 08.05.2016 01:12:06 +0200 - build 4664
+﻿zg 08.05.2016 13:27:59 +0200 - build 4665
+
+1. уточнение 4638.1: макрообласть для комбобокса - "Dialog".
+
+2. опубликован тип окна WTYPE_COMBOBOX. ACTL_GETWINDOWINFO в Id возвращает хэндл родительского диалога.
+
+drkns 08.05.2016 01:12:06 +0200 - build 4664
 
 1. Уточнение 4663.2.
 
